--- a/cruise-control-metrics-reporter/src/test/resources/log4j.properties
+++ b/cruise-control-metrics-reporter/src/test/resources/log4j.properties
@@ -8,7 +8,7 @@ log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=[%d] %p %m (%c:%L)%n
 
-log4j.logger.org.apache.kafka.clients.Metadata=ERROR
+log4j.logger.org.apache.kafka=ERROR
 log4j.logger.kafka=ERROR
 
 # zkclient can be verbose, during debugging it is common to adjust is separately
