Make the RackAwareCapacityGoal more robust (#51)

--- a/config/cruisecontrol.properties
+++ b/config/cruisecontrol.properties
@@ -156,7 +156,7 @@ execution.progress.check.interval.ms=10000
 # =======================================
 
 # The goal violation notifier class
-goal.violation.notifier.class=com.linkedin.kafka.cruisecontrol.detector.notifier.SelfHealingNotifier
+anomaly.notifier.class=com.linkedin.kafka.cruisecontrol.detector.notifier.SelfHealingNotifier
 
 # The anomaly detection interval
 anomaly.detection.interval.ms=10000
